Fixing alignment

--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -70,12 +70,12 @@ h4 {
 }
 
 .Donate {
-  display: flex;
-  justify-content: center;
-  padding-top: 3rem;
+  padding-top: 2rem;
 
   &-button {
     opacity: 0.7;
+    margin-left: auto;
+    margin-right: auto;
 
     &:hover {
       opacity: 1;
